--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,43 @@
 {
-    "name": "ludmila/ludmila",
-    "description": "ludmilaporto.com",
-    "keywords": ["portfolio", "ludmilaporto"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "laravel/framework": "4.2.*",
-        "zizaco/confide": "~3.2",
-        "zizaco/entrust": "~1.2",
-        "bllim/datatables": "~1.3",
-        "intervention/image": "2.0.16"
-    },
-    "autoload": {
-        "classmap": [
-            "app/commands",
-            "app/controllers",
-            "app/models",
-            "app/database/migrations",
-            "app/database/seeds",
-            "app/tests/TestCase.php"
-        ]
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist"
-    },
-    "minimum-stability": "stable"
+	"name" : "ludmila/ludmila",
+	"description" : "ludmilaporto.com",
+	"keywords" : [
+		"portfolio",
+		"ludmilaporto"
+	],
+	"license" : "MIT",
+	"type" : "project",
+	"require" : {
+		"php": "~5.5.0"
+		"laravel/framework" : "4.2.*",
+		"zizaco/confide" : "~3.2",
+		"zizaco/entrust" : "~1.2",
+		"bllim/datatables" : "~1.3",
+		"intervention/image" : "2.0.16"
+	},
+	"autoload" : {
+		"classmap" : [
+			"app/commands",
+			"app/controllers",
+			"app/models",
+			"app/database/migrations",
+			"app/database/seeds",
+			"app/tests/TestCase.php"
+		]
+	},
+	"scripts" : {
+		"post-install-cmd" : [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-update-cmd" : [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-create-project-cmd" : "php artisan key:generate"
+	},
+	"config" : {
+		"preferred-install" : "dist"
+	},
+	"minimum-stability" : "stable"
 }
