--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,8 @@
 	"config" : {
 		"preferred-install" : "dist"
 	},
-	"minimum-stability" : "stable"
+	"minimum-stability" : "stable",
+	"require-dev": {
+		"heroku/heroku-buildpack-php": "*"
+	}
 }
