--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"zizaco/confide" : "~3.2",
 		"zizaco/entrust" : "~1.2",
 		"bllim/datatables" : "~1.3",
-		"intervention/image" : "2.0.16"
+		"intervention/image" : "2.0.16",
+		"aws/aws-sdk-php" : "~2.6"
 	},
 	"autoload" : {
 		"classmap" : [
