--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
 	"license" : "MIT",
 	"type" : "project",
 	"require" : {
-		"php": "~5.6.0",
+		"php" : "~5.6.0",
 		"laravel/framework" : "4.2.*",
 		"zizaco/confide" : "~3.2",
 		"zizaco/entrust" : "~1.2",
 		"bllim/datatables" : "~1.3",
 		"intervention/image" : "2.0.16",
-		"aws/aws-sdk-php" : "~2.6"
+		"aws/aws-sdk-php-laravel": "1.*"
 	},
 	"autoload" : {
 		"classmap" : [
@@ -41,7 +41,7 @@
 		"preferred-install" : "dist"
 	},
 	"minimum-stability" : "stable",
-	"require-dev": {
-		"heroku/heroku-buildpack-php": "*"
+	"require-dev" : {
+		"heroku/heroku-buildpack-php" : "*"
 	}
 }
